--- a/src/app/modules/studentexam/exams/exams.component.html
+++ b/src/app/modules/studentexam/exams/exams.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
     <div style="padding:15px 15px 0px 15px;">
         <div><strong>Exams</strong></div>
     </div>
