--- a/src/app/modules/StudentSubject/studentsubjectdashboard/studentsubjectdashboard.component.html
+++ b/src/app/modules/StudentSubject/studentsubjectdashboard/studentsubjectdashboard.component.html
@@ -5,25 +5,24 @@
         <alert></alert>
         <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
         <form [formGroup]="searchForm">
-            <!-- <mat-form-field appearance="outline">
-                <mat-label>Batch</mat-label>
-                <mat-select formControlName="searchBatchId">
-                    <mat-option value="0">--select--</mat-option>
-                    <mat-option *ngFor="let item of Batches" [value]="item.MasterDataId">
-                        {{item.MasterDataName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field> -->
             <mat-form-field appearance="outline">
                 <mat-label>Class</mat-label>
                 <mat-select formControlName="searchClassId">
-                    <mat-option value="0">--select--</mat-option>
                     <mat-option *ngFor="let item of Classes" [value]="item.MasterDataId">
                         {{item.MasterDataName}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
             <mat-form-field appearance="outline">
+                <mat-label>Section</mat-label>
+                <mat-select formControlName="searchSectionId">
+                    <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">
+                        {{item.MasterDataName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+
+            <!-- <mat-form-field appearance="outline">
                 <mat-label>Subject</mat-label>
                 <mat-select formControlName="searchSubjectId">
                     <mat-option value="0">--select--</mat-option>
@@ -32,7 +31,7 @@
 
                     </mat-option>
                 </mat-select>
-            </mat-form-field>
+            </mat-form-field> -->
             <button [disabled]="loading" class="mat-raised-button" (click)="GetStudentClassSubject()">
                 <mat-icon>search</mat-icon>
             </button>
@@ -42,7 +41,31 @@
         </form>
         Subject can be assigned to student defined in student class.
         <mat-table #table [dataSource]="dataSource">
-            <ng-container matColumnDef="Student">
+            <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
+                <mat-header-cell *matHeaderCellDef>{{disCol!='Action'?disCol:''}}
+                    <div *ngIf="StudentSubjectList.length>0" fxLayoutAlign="center center">
+                    <mat-checkbox fxLayoutAlign="center center" matTooltip="select all" *ngIf="disCol=='Action'" (click)="$event.stopPropagation()"
+                        (change)="SelectAll(element,$event)">
+                    </mat-checkbox>&nbsp;
+                    <button *ngIf="disCol=='Action'" [disabled]="loading || PagePermission=='read'"
+                        matTooltip="save all" mat-mini-fab (click)="UpdateAll(element)">
+                        <mat-icon>save</mat-icon>
+                    </button>
+                </div>
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element ">
+                    <mat-checkbox matTooltip="select all in row" *ngIf="disCol !='Student'" (click)="$event.stopPropagation()"
+                        (change)="SelectAllInRow(element,$event,disCol)" [checked]="element[disCol]==1?true:false">
+                    </mat-checkbox>
+                    &nbsp;
+                    <button *ngIf="disCol=='Action'" [disabled]="loading || PagePermission=='read'"
+                        matTooltip="save" mat-mini-fab (click)="SaveRow(element)">
+                        <mat-icon>save</mat-icon>
+                    </button>
+                    {{disCol=='Student'?element[disCol]:''}}
+                </mat-cell>
+            </ng-container>
+            <!-- <ng-container matColumnDef="Student">
                 <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Student
                 </mat-header-cell>
                 <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
@@ -61,8 +84,8 @@
                 <mat-cell *matCellDef="let element">
                     {{element.SubjectType}}
                 </mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="Active">
+            </ng-container> -->
+            <!-- <ng-container matColumnDef="Active">
                 <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
                 <mat-cell *matCellDef="let element">
                     <mat-checkbox (click)="$event.stopPropagation()" (change)="UpdateActive(element,$event)"
@@ -74,12 +97,12 @@
                 <mat-header-cell *matHeaderCellDef>
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                    <button [disabled]="loading" [disabled]="!element.Action" matTooltip="view/edit" mat-mini-fab
+                    <button [disabled]="loading || !element.Action || PagePermission=='read'" matTooltip="view/edit" mat-mini-fab
                         (click)="UpdateOrSave(element)">
                         <mat-icon>save</mat-icon>
                     </button>
                 </mat-cell>
-            </ng-container>
+            </ng-container> -->
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
             <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
         </mat-table>
