--- a/src/app/modules/control/add-master-data/add-master-data.component.scss
+++ b/src/app/modules/control/add-master-data/add-master-data.component.scss
@@ -48,6 +48,6 @@ button {
     outline: none;
 }
 
-// mat-form-field.mat-form-field {
-//     width: 100%;
-//   }
+mat-form-field {
+    margin-right: 15px;
+  }
