--- a/src/app/modules/studentexam/examdashboard/examdashboard.component.scss
+++ b/src/app/modules/studentexam/examdashboard/examdashboard.component.scss
@@ -1,9 +1,9 @@
-.container{
-    margin-top: 125px;
-}
+// .container{
+//     margin-top: 125px;
+// }
 
-@media only screen and (max-width: 600px) {
-    .container {
-        margin-top: 150px;
-    }
-}
+// @media only screen and (max-width: 600px) {
+//     .container {
+//         margin-top: 150px;
+//     }
+// }
